--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,17 @@ black[jupyter]
 datasets
 fire
 peft
-transformers>=4.31.0
+transformers>=4.45.2
+tiktoken
 sentencepiece
 py7zr
 scipy
 optimum
 wandb
 hydra-core>=1.3.2
+openai-whisper
+soundfile
+torchaudio
+pandas
+tqdm
+numpy
