--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .DS_Store
 __pycache__
 .ipynb_checkpoints
+venv/
+.venv/
+env/
+.env
 .vscode
 debug.py
 debug.ipynb
@@ -16,10 +20,6 @@ jobs/
 debug/
 audio/
 exp/
-examples/s2s/scripts/debug
-examples/vsr_LRS3/scripts/decode_avhubert_vo_vicuna_7b_noself.sh
 examples/asr_librispeech/scripts/decode_hubert_xtralarge_linear_vicuna_7b_copy.sh
-examples/vsr_LRS3/scripts/decode_avhubert_vo_vicuna_7b_copy.sh
 scripts_all
-examples/hotwords_librispeech
 examples/asr_librispeech/scripts/decode_hubert_xtralarge_linear_vicuna_7b_debug.sh
